NEXT
  - Move the INT 3 default vector to well within the initial 16
    bytes of the DOS kernel, away from the List of Lists and SFT.
    The previous placement caused certain versions of Windows 3.2
    (yes, the Chinese version) to crash on startup. (joncampbell123).
  - When using the running program to name screenshots and such,
    filter out all invalid characters so that Windows users can
    take snapshots even if junk characters are there (joncampbell123).
  - DOS FAT driver: If INT 13h reports disk change, adapt floppy
    disk geometry to new disk image according to media byte. This
    allows DS_BLISS to present it's 720K fake floppy even if the
    user initially mounted a 1.44MB floppy to drive A: (joncampbell123).
  - INT 10 mode list: Add "pitch" parameter. If nonzero, the value
    (in pixels) is how to program the pixels per scanline when
    setting the mode.
  - VESAMOED: Add -pitch option to control the pitch (pixels per
    scanline). The intent is to work around DOS games that assume
    nonstandard pixels per scanline by allowing the VESA BIOS mode
    to use a different one. For example, Line Wars II has an S3
    acceleration mode that uses 800x600, but for whatever reason,
    assumes the video mode is 1024 pixels per scanline, and will
    render garbled graphics if that is not the case. (joncampbell123).
  - S3 emulation: Follow S3 Trio64 documentation and mask the Linear
    Window Position bits according to the size of the memory. You
    can only place it on a multiple of the memory size. This silences
    warnings caused by Line Wars II which appears to modify only the
    upper byte but not the lower when modifying this register, which
    then leaves 0xA0 in the lower half. That lower half would be
    ignored for 1MB or larger video memory sizes. (joncampbell123).
  - S3 XGA emulation: Add XGA acceleration for 4bpp packed 16-color
    SVGA modes. A CAD package has S3 support drivers that use the