@@ -1,4 +1,11 @@
 NEXT
+  - Gravis Ultrasound: Officially, registers 0x0-0xF, the voice
+    control registers, are documented to have a 0x0-0xF write and
+    0x80-0x8F read alias. Unofficially, according to the behavior
+    of 1997 demo "Out of Control" by Contract, all GUS registers
+    have a N and (N+0x80) alias, or at least register 0x4C, and
+    you can read them back from either index. Or else the demo
+    fails to detect the GUS. So add this alias. (joncampbell123).
   - Move the INT 3 default vector to well within the initial 16
     bytes of the DOS kernel, away from the List of Lists and SFT.
     The previous placement caused certain versions of Windows 3.2
